tests/NormalTests/paczka1/fuzzy1/21081803.err
Error in line 1: gfN9KpJ A927 72,1
Error in line 3: EeJ5PTB A909 56,8
Error in line 8: EeJ5PTB A927 93,1
Error in line 13: EeJ5PTB S698 88,2
Error in line 22: hA927
Error in line 26: gfN9KpJ S698 ;1,8
Error in line 21: grPX3oAS S698 390,0
